--- a/SanPham.html
+++ b/SanPham.html
@@ -479,7 +479,7 @@
                     <div class="col-md-2">
                         <div class="products">
                             <a href="MatHangGan.html">
-                                <img src="image/Gan//Gan 356 X.png" alt="">
+                                <img src="image/Gan/Gan 356 X.png" alt="">
                                 <h6>GAN 356 X</h6>
                                 <h5>đ450.000</h5>
                                 <div class="rating">
@@ -514,9 +514,9 @@
                 <div class="row">
                     <div class="col-md-2">
                         <div class="products">
-                            <a href="MatHangQiyi.html">
-                                <img src="image/Qiyi/Qiyi Square 1.jpeg" alt="">
-                                <h6>Qiyi Square-1</h6>
+                            <a href="MatHangMoyu.html">
+                                <img src="image/Moyu/Axis Cube.jpeg" alt="">
+                                <h6>Moyu Axis Cube</h6>
                                 <h5>đ80.000</h5>
                                 <div class="rating">
                                     <span class="fa fa-star checked"></span>
@@ -525,7 +525,7 @@
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star"></span>
                                 </div>
-                                <p>Đã bán 54</p>
+                                <p>Đã bán 11</p>
                             </a>
                         </div>
                     </div>
@@ -703,10 +703,10 @@
                     </div>
                     <div class="col-md-2">
                         <div class="products">
-                            <a href="MatHangQiyi.html">
-                                <img src="image/Qiyi/Qiyi Fisher.jpeg" alt="">
-                                <h6>Qiyi Fisher</h6>
-                                <h5>đ65.000</h5>
+                            <a href="MatHangMoyu.html">
+                                <img src="image/Moyu/Pandora Cube.jpeg" alt="">
+                                <h6>Moyu Pandora Cube</h6>
+                                <h5>đ88.000</h5>
                                 <div class="rating">
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
@@ -714,7 +714,7 @@
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star"></span>
                                 </div>
-                                <p>Đã bán 16</p>
+                                <p>Đã bán 37</p>
                             </a>
                         </div>
                     </div>
